--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "add": "^2.0.6",
+    "axios": "^0.19.0",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
     "openseadragon": "^2.4.1",
