--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "add": "^2.0.6",
     "axios": "^0.19.0",
+    "formik": "^2.0.8",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
     "openseadragon": "^2.4.1",
