--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-leaflet": "^2.6.0",
     "react-leaflet-iiif": "^0.1.9",
     "react-scripts": "3.2.0",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "yarn run tailwind:css && react-scripts start",
