feature: add duplicate dropdowns

--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.38",
     "add": "^2.0.6",
     "axios": "^0.19.0",
     "formik": "^2.0.8",
+    "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
+    "npm": "^6.13.4",
     "openseadragon": "^2.4.1",
     "ramda": "^0.26.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-iiif-image": "^1.0.1",
     "react-iiif-media-player": "^2.0.0",
     "react-leaflet": "^2.6.0",
