--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "openseadragon": "^2.4.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-iiif-image": "^1.0.1",
     "react-iiif-media-player": "^2.0.0",
