--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "add": "^2.0.6",
     "axios": "^0.19.0",
     "formik": "^2.0.8",
+    "i18next": "^19.0.3",
     "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
@@ -19,6 +20,7 @@
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.1",
     "react-iiif-image": "^1.0.1",
     "react-iiif-media-player": "^2.0.0",
     "react-leaflet": "^2.6.0",
