--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^11.3.1",
     "react-iiif-image": "^1.0.1",
     "react-iiif-media-player": "^2.0.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-leaflet": "^2.6.0",
     "react-leaflet-iiif": "^0.1.9",
     "react-scripts": "3.2.0",
