--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+src/index.css
+src/css/tailwind.css
+
+# not using npm
+package-lock.json
 
 # dependencies
 /node_modules
