--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.4",
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
@@ -26,6 +27,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-leaflet": "^2.6.0",
     "react-leaflet-iiif": "^0.1.9",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "tailwindcss": "^1.1.3",
     "uuid": "^3.3.3"
