--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# config files
+src/auth_config.json
+src/auth_ext_config.json
