--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.4",
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
     "add": "^2.0.6",
+    "auth0-js": "^9.12.2",
     "axios": "^0.19.0",
     "formik": "^2.1.3",
     "i18next": "^19.0.3",
