chore: speed it up

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "add": "^2.0.6",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.0",
+    "deep-equal": "^2.0.1",
     "formik": "^2.1.3",
     "i18next": "^19.0.3",
     "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
+    "memoize-one": "^5.1.1",
     "npm": "^6.13.4",
     "openseadragon": "^2.4.1",
     "ramda": "^0.26.1",
@@ -27,8 +29,13 @@
     "react-infinite-scroller": "^1.2.4",
     "react-leaflet": "^2.6.0",
     "react-leaflet-iiif": "^0.1.9",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.1",
     "tailwindcss": "^1.1.3",
     "uuid": "^3.3.3"
   },
