--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "tailwindcss": "^1.1.3",
+    "throttle-debounce": "^2.1.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
