--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@material-ui/lab": "^4.0.0-alpha.42",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
+    "@types/ramda": "^0.27.3",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-infinite-scroller": "^1.2.1",
+    "@types/uuid": "^7.0.2",
     "add": "^2.0.6",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.0",
