--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@types/auth0-js": "^9.13.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/ramda": "^0.27.3",
