--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-leaflet-iiif": "^0.1.9",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-table": "^7.2.2",
+    "react-window": "^1.8.5",
     "tailwindcss": "^1.1.3",
     "uuid": "^3.3.3"
   },
