--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/uuid": "^7.0.2",
+    "@welldone-software/why-did-you-render": "^4.2.7",
     "add": "^2.0.6",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.0",
@@ -22,7 +23,7 @@
     "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet-iiif": "^3.0.0",
-    "npm": "^6.14.4",
+    "npm": "^6.14.7",
     "openseadragon": "^2.4.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
@@ -35,8 +36,10 @@
     "react-infinite-scroller": "^1.2.4",
     "react-leaflet": "^2.6.0",
     "react-leaflet-iiif": "^0.1.9",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "tailwindcss": "^1.1.3",
     "uuid": "^3.3.3"
   },
@@ -65,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.9",
     "prettier": "1.18.2",
     "typescript": "^3.8.3"
   }
