--- a/package.json
+++ b/package.json
@@ -15,15 +15,11 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/uuid": "^7.0.2",
     "@welldone-software/why-did-you-render": "^4.2.7",
-    "add": "^2.0.6",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.0",
     "formik": "^2.1.3",
+    "history": "^5.0.0",
     "i18next": "^19.0.3",
-    "install": "^0.13.0",
-    "leaflet": "^1.6.0",
-    "leaflet-iiif": "^3.0.0",
-    "npm": "^6.14.7",
     "openseadragon": "^2.4.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
@@ -31,13 +27,8 @@
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.1",
-    "react-iiif-image": "^1.0.1",
-    "react-iiif-media-player": "^2.0.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-leaflet": "^2.6.0",
-    "react-leaflet-iiif": "^0.1.9",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "tailwindcss": "^1.1.3",
