--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@tailwindcss/ui": "^0.5.0",
     "@types/auth0-js": "^9.13.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
@@ -31,7 +32,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
-    "tailwindcss": "^1.1.3",
+    "tailwindcss": "^1.5.1",
     "uuid": "^3.3.3"
   },
   "scripts": {
